objects/Project_Installation_Setting__c.object
<CustomObject>
    <fields>
        <fullName>Community__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Residential Installation Project Management
Pat Hevrdejs
New Homes Community object lookup</description>
        <label>Community</label>
        <referenceTo>NH_Community__c</referenceTo>
        <relationshipLabel>Project Installation Settings</relationshipLabel>
        <relationshipName>Project_Installation_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Installation_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Residential Installation Project Mgmt
Priti Rastogi</description>
        <label>Installation Model</label>
        <referenceTo>Installation_Model__c</referenceTo>
        <relationshipLabel>Project Installation Settings</relationshipLabel>
        <relationshipName>Project_Installation_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Installation_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Residential Installation Project
Defines the IP to be matched with zip code or project template</description>
        <label>Partner Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Project Installation Settings</relationshipLabel>
        <relationshipName>Project_Installation_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Role__c</fullName>
        <description>The Partner Role that will match Alliance Partner and Installation Model</description>
        <label>Partner Role</label>
        <picklist>
            <picklistValues>
                <fullName>IP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DPE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DRIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Residential Installation Project</description>
        <label>Project Template</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Residential_Project__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Project Template</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Residential_Project__c</referenceTo>
        <relationshipLabel>Project Installation Settings</relationshipLabel>
        <relationshipName>Project_Installation_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Residential Project Management
Used to assign a user to a project team member role</description>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Commissioning Technician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crew Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Support Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineer of Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Superintendent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Products Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inspection Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation Partner Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interconnection Technician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Support Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PC Supervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permit Runner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permit Technician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permitting Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Design Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebate and Interconnection Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Operations Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Surveyor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Sales Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 1 Design</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State the Project Installation Setting is applicable to.</description>
        <inlineHelpText>State the Project Installation Setting is applicable to.</inlineHelpText>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Residential Installation Project Management
Used to assign a user to specific project team member role</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Installation_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <description>Residential Installation Project
Zip code fields match to IP so project auto creation can select correct IP for customers address</description>
        <label>Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Project Installation Setting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Installation_Partner__c</columns>
        <columns>Project_Template__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>IM_User_Assignment</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Installation_Partner__c</columns>
        <columns>Installation_Model__c</columns>
        <columns>Partner_Role__c</columns>
        <columns>State__c</columns>
        <columns>User__c</columns>
        <columns>Project_Template__c</columns>
        <columns>Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project_Installation_Setting__c.IM_User_Assignment</value>
        </filters>
        <label>IM User Assignment</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IM_User_Assignment_N_LA</fullName>
        <columns>NAME</columns>
        <columns>Installation_Model__c</columns>
        <columns>Installation_Partner__c</columns>
        <columns>Partner_Role__c</columns>
        <columns>Role__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Installation_Partner__c</field>
            <operation>equals</operation>
            <value>SPD Self Installation (North L.A.)</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project_Installation_Setting__c.IM_User_Assignment</value>
        </filters>
        <filters>
            <field>Installation_Model__c</field>
            <operation>equals</operation>
            <value>TPS CA Loan</value>
        </filters>
        <label>IM User Assignment N. LA</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IM_User_Assignment_Ontario</fullName>
        <columns>NAME</columns>
        <columns>Installation_Model__c</columns>
        <columns>Partner_Role__c</columns>
        <columns>Installation_Partner__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Installation_Partner__c</field>
            <operation>equals</operation>
            <value>SPD Self Installation (Ontario)</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project_Installation_Setting__c.IM_User_Assignment</value>
        </filters>
        <label>IM User Assignment Ontario</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IP_Regions</fullName>
        <columns>NAME</columns>
        <columns>Zip_Code__c</columns>
        <columns>Installation_Partner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project_Installation_Setting__c.IP_Regions</value>
        </filters>
        <label>IP Regions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IP_Templates</fullName>
        <columns>NAME</columns>
        <columns>Installation_Partner__c</columns>
        <columns>Project_Template__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project_Installation_Setting__c.IP_Template</value>
        </filters>
        <label>IP Templates</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IP_User_Assignment</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Project_Template__c</columns>
        <columns>User__c</columns>
        <columns>Partner_Role__c</columns>
        <columns>Installation_Partner__c</columns>
        <columns>Installation_Model__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Community__c</columns>
        <columns>Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project_Installation_Setting__c.IP_User_Assignment</value>
        </filters>
        <label>IP User Assignment</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SPRI_Richmond_Geographic_Region</fullName>
        <columns>NAME</columns>
        <columns>Zip_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Installation_Partner__c</field>
            <operation>equals</operation>
            <value>SPRI - Richmond</value>
        </filters>
        <label>SPRI Richmond Geographic Region</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PS-{00000000}</displayFormat>
        <label>Project Installation Settings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Installation Settings</pluralLabel>
    <recordTypes>
        <fullName>IM_Template</fullName>
        <active>true</active>
        <description>Relates Installation Model to Project Template</description>
        <label>IM Template</label>
    </recordTypes>
    <recordTypes>
        <fullName>IM_User_Assignment</fullName>
        <active>true</active>
        <description>User Assignment based on Installation Model and Partner Types</description>
        <label>IM User Assignment</label>
    </recordTypes>
    <recordTypes>
        <fullName>IP_Regions</fullName>
        <active>true</active>
        <description>Assigns an IP to a zip code</description>
        <label>IP Regions</label>
    </recordTypes>
    <recordTypes>
        <fullName>IP_Template</fullName>
        <active>true</active>
        <description>Sets the default project template to an IP</description>
        <label>IP Template</label>
    </recordTypes>
    <recordTypes>
        <fullName>IP_User_Assignment</fullName>
        <active>true</active>
        <description>Used to assign a user to a  (project team member) role for a designated IP</description>
        <label>IP User Assignment</label>
    </recordTypes>
    <recordTypes>
        <fullName>NH_User_Assignment</fullName>
        <active>true</active>
        <description>New Homes - Assigns users to roles based on Community</description>
        <label>NH User Assignment</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>